use viewport height for mobile detection (issues with facebook in-app browser on iOS)

--- a/style/main.css
+++ b/style/main.css
@@ -61,7 +61,7 @@ input:focus {
   left: 0;
   background: #E7E7E7;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
   padding: 10px;
   color: #525151;
   direction: rtl;
